--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/authtypes.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/authtypes.tmpl
@@ -1,14 +1,7 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; System Administration</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-</head>
-<body>
-<!-- TMPL_INCLUDE NAME="header.inc" -->
-
-
-<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
-
-<script language="javascript" type="text/javascript">
+<script type="text/javascript">
 /////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 function isNotNull(f,noalert) {
 	if (f.value.length ==0) {
@@ -61,6 +54,14 @@ function Check(f) {
 	}
 }
 </script>
+</head>
+<body>
+<!-- TMPL_INCLUDE NAME="header.inc" -->
+
+
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
+
 
 <div id="doc3" class="yui-t2">
    
