--- a/koha-tmpl/intranet-tmpl/prog/en/modules/authorities/searchresultlist-auth.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/authorities/searchresultlist-auth.tmpl
@@ -1,6 +1,13 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Cataloguing Authority Selection</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<script type="text/javascript">
+
+function jumpfull(page)
+{	
+    window.open(page,'','fullscreen,scrollbars');
+}
+</script>
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
@@ -140,13 +147,6 @@
             </p>
         </div>
 
-<script language="JavaScript" type="text/javascript">
-
-function jumpfull(page)
-{	
-    window.open(page,'','fullscreen,scrollbars');
-}
-</script>
 </div>
 </div>
 </div>
