--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/member-quicksearch-results.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/member-quicksearch-results.tmpl
@@ -1,9 +1,7 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Patron Quick Search</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-</head>
-<body>
-<!-- TMPL_INCLUDE NAME="header.inc" --><script type="text/javascript">
+<script type="text/javascript">
   // Set the value of the form field to the passed value and optionally shift
     // focus and close the popup.
     function FillForm(val,formname,formfield) {
@@ -17,6 +15,9 @@
         newwin.close();
     }
 </script>
+</head>
+<body>
+<!-- TMPL_INCLUDE NAME="header.inc" -->
 
 <div id="doc3" class="yui-t2">
    
