--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentryP.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentryP.tmpl
@@ -1,6 +1,6 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Professional Patron Management</title>
-<script type="text/javascript" src="<!-- TMPL_VAR NAME='themelang' -->/js/members.js"></script>
+<script type="text/javascript" src="<!-- TMPL_VAR NAME="themelang" -->/js/members.js"></script>
 <!-- TMPL_INCLUDE NAME="calendar.inc" -->
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 </head>
