--- a/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/basket.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/basket.tmpl
@@ -1,6 +1,16 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; <!-- TMPL_UNLESS name="basketno" -->New <!-- /TMPL_UNLESS -->Shopping Basket (<!-- TMPL_VAR NAME="basketno" -->) for <!-- TMPL_VAR NAME="name" --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<!-- TMPL_UNLESS name="closedate" -->
+<script type="text/javascript">
+            function confirm_close() {
+                var is_confirmed = confirm('Are you sure you want to close this basket?');
+                if (is_confirmed) {
+                    window.location = "/cgi-bin/koha/acqui/booksellers.pl?op=close&basketno=<!-- TMPL_VAR NAME="basketno" -->&supplier=<!-- TMPL_VAR name="booksellerid" -->";
+                }
+            }
+        </script>
+		<!-- /TMPL_UNLESS -->
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
@@ -24,14 +34,6 @@
         <!-- TMPL_IF name="closedate" --><p><label>Closed On: </label> <!-- TMPL_VAR name="closedate" --></p><!-- /TMPL_IF -->
         <!-- TMPL_UNLESS name="closedate" -->
         <p><a href="javascript:confirm_close()" class="button">Close this basket</a></p>
-        <script type="text/javascript">
-            function confirm_close() {
-                var is_confirmed = confirm('Are you sure you want to close this basket?');
-                if (is_confirmed) {
-                    window.location = "/cgi-bin/koha/acqui/booksellers.pl?op=close&basketno=<!-- TMPL_VAR NAME="basketno" -->&supplier=<!-- TMPL_VAR name="booksellerid" -->";
-                }
-            }
-        </script>
         <!-- /TMPL_UNLESS -->
     </div>
     
@@ -48,9 +50,7 @@
                 <th>Qty.</th>
                 <th>Total</th>
                 <th class="DoNotPrint">
-                    <a href="basket.pl?basketno=<!-- TMPL_VAR name="basketno" -->&amp;order=aqorderbreakdown.bookfundid,biblioitems.publishercode">
-                        Fund
-                    </a>
+                    <a href="basket.pl?basketno=<!-- TMPL_VAR name="basketno" -->&amp;order=aqorderbreakdown.bookfundid,biblioitems.publishercode">Fund</a>
                 </th>
                 <!-- TMPL_IF name="active" -->
                     <!-- TMPL_UNLESS name="closedate" -->
