--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/biblio_framework.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/biblio_framework.tmpl
@@ -1,13 +1,7 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; System Administration: <!-- TMPL_IF NAME="add_form" --><!-- TMPL_IF NAME="frameworkcode" -->Modify framework text<!-- TMPL_ELSE -->Add framework<!-- /TMPL_IF --><!-- /TMPL_IF --><!-- TMPL_IF NAME="delete_confirm" -->Delete Framework for <!-- TMPL_VAR NAME="frameworktext" --> (<!-- TMPL_VAR NAME="frameworkcode" -->)?<!-- /TMPL_IF --><!-- TMPL_IF NAME="else" -->Biblio Framework<!-- /TMPL_IF --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-</head>
-<body>
-<!-- TMPL_INCLUDE NAME="header.inc" -->
-
-<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
-
-<script language="javascript" type="text/javascript">
+<script type="text/javascript">
 /////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 function isNotNull(f,noalert) {
     if (f.value.length ==0) {
@@ -60,6 +54,13 @@ function Check(f) {
     }
 }
 </script>
+</head>
+<body>
+<!-- TMPL_INCLUDE NAME="header.inc" -->
+
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
+
 
 <div id="doc3" class="yui-t2">
    
