--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/categoryitem.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/categoryitem.tmpl
@@ -1,14 +1,7 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; <!-- TMPL_IF NAME="categorycode" -->Modify category<!-- TMPL_ELSE -->Add category<!-- /TMPL_IF --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-</head>
-<body>
-<!-- TMPL_INCLUDE NAME="header.inc" -->
-
-<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
-
-<!-- TMPL_IF NAME="add_form" -->
-        <script language="JavaScript" type="text/javascript">
+<script type="text/javascript">
         //
         function isNotNull(f,noalert) {
                 if (f.value.length ==0) {
@@ -64,6 +57,14 @@
                 }
         }
         </script>
+</head>
+<body>
+<!-- TMPL_INCLUDE NAME="header.inc" -->
+
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
+<!-- TMPL_IF NAME="add_form" -->
+        
 
 <div id="doc3" class="yui-t2">
    
