--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/currency.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/currency.tmpl
@@ -6,20 +6,8 @@
 <!-- TMPL_IF NAME="delete_confirmed" -->Currency Deleted<!-- /TMPL_IF -->
 <!-- TMPL_IF NAME="else" -->Currencies<!-- /TMPL_IF --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-</head>
-<body>
-<!-- TMPL_INCLUDE NAME="header.inc" -->
-
-<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
-
-<div id="doc3" class="yui-t2">
-   
-   <div id="bd">
-	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
-
 <!-- TMPL_IF NAME="add_form" -->
-        <script>
+<script type="text/javascript">
         //
         function isNotNull(f,noalert) {
                 if (f.value.length ==0) {
@@ -72,6 +60,21 @@
                 }
         }
         </script>
+		<!-- /TMPL_IF -->
+</head>
+<body>
+<!-- TMPL_INCLUDE NAME="header.inc" -->
+
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
+
+<!-- TMPL_IF NAME="add_form" -->
+        
 
 <form action="<!-- TMPL_VAR NAME="script_name" -->" name="Aform" method="post">
 <input type="hidden" name="op" value="add_validate" />
