--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/printers.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/printers.tmpl
@@ -6,20 +6,7 @@
 <!-- TMPL_IF NAME="delete_confirmed" -->Printer Deleted<!-- /TMPL_IF -->
 <!-- TMPL_IF NAME="else" -->Printers<!-- /TMPL_IF --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-</head>
-<body>
-<!-- TMPL_INCLUDE NAME="header.inc" -->
-
-<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
-
-<div id="doc3" class="yui-t2">
-   
-   <div id="bd">
-	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
-
-<!-- TMPL_IF NAME="add_form" -->
-        <script language="JavaScript" type="text/javascript">
+<!-- TMPL_IF NAME="add_form" --><script type="text/javascript">
         //
         function isNotNull(f,noalert) {
                 if (f.value.length ==0) {
@@ -72,6 +59,21 @@
                 }
         }
         </script>
+	<!-- /TMPL_IF -->
+</head>
+<body>
+<!-- TMPL_INCLUDE NAME="header.inc" -->
+
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
+
+<!-- TMPL_IF NAME="add_form" -->
+        
 
 
         
