--- a/koha-tmpl/intranet-tmpl/prog/en/modules/authorities/detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/authorities/detail.tmpl
@@ -1,20 +1,21 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Authority Details</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-</head>
-<body>
-<!-- TMPL_INCLUDE NAME="header.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-authorities.inc" -->
+<script type="text/javascript">
 
-<div id="doc3" class="yui-t2">
-   
-   <div id="bd">
-	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
-
+function confirm_deletion() {
+	var is_confirmed = confirm('Are you sure you want to delete this authority?');
+	if (is_confirmed) {
+		window.location="authorities-home.pl?op=delete&amp;authid=<!-- TMPL_VAR NAME="authid" -->";
+	}
+}
+function Dopop(link) {
+	newin=window.open(link,'width=500,height=400,toolbar=false,scrollbars=yes');
+}
+</script>
 <!-- TMPL_IF Name="displayhierarchy"-->
 <link rel="stylesheet" type="text/css" href="<!-- TMPL_VAR NAME="themelang" -->/css/hierarchy.css" />
-<script language="JavaScript" type="text/javascript">
+<script type="text/javascript">
 function showParents(mynumber) {
   var parents=document.getElementsByName(mynumber+'p')
   for(i=0;i<parents.length;i++){
@@ -36,6 +37,19 @@ function showChildren(mynumber) {
   }
 }
 </script>
+ <!--/TMPL_IF -->
+</head>
+<body>
+<!-- TMPL_INCLUDE NAME="header.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-authorities.inc" -->
+
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
+
+<!-- TMPL_IF Name="displayhierarchy"-->
 
 <div class="hierarchies">
 <!--TMPL_LOOP Name="loophierarchies" -->
@@ -107,18 +121,7 @@ function showChildren(mynumber) {
 <!-- /TMPL_LOOP --> <!-- tag -->
 </div>
 	
-<script language="JavaScript" type="text/javascript">
 
-function confirm_deletion() {
-	var is_confirmed = confirm('Are you sure you want to delete this authority?');
-	if (is_confirmed) {
-		window.location="authorities-home.pl?op=delete&amp;authid=<!-- TMPL_VAR NAME="authid" -->";
-	}
-}
-function Dopop(link) {
-	newin=window.open(link,'width=500,height=400,toolbar=false,scrollbars=yes');
-}
-</script>
 
 </div>
 </div>
