--- a/koha-tmpl/intranet-tmpl/prog/en/modules/authorities/searchresultlist.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/authorities/searchresultlist.tmpl
@@ -1,6 +1,16 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Authorities &rsaquo; Search Result List</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<script type="text/javascript" >
+
+function confirm_deletion(id) {
+	
+	var is_confirmed = confirm('Are you sure you want to delete this authority?');
+	if (is_confirmed) {
+		window.location="authorities-home.pl?op=delete&amp;authid="+id;
+	}
+}
+</script>
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
@@ -56,17 +66,6 @@
 </div>
 
 <div class="paginationBar"><!-- TMPL_VAR NAME="pagination_bar" --></div>
-
-<script language="JavaScript" type="text/javascript" >
-
-function confirm_deletion(id) {
-	
-	var is_confirmed = confirm('Are you sure you want to delete this authority?');
-	if (is_confirmed) {
-		window.location="authorities-home.pl?op=delete&amp;authid="+id;
-	}
-}
-</script>
 
 </div>
 </div>
