--- a/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/thesaurus_popup.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/thesaurus_popup.tmpl
@@ -1,6 +1,13 @@
-	<html>
-	<head>
-	<title>Thesaurus value builder for category <!-- TMPL_VAR name="category" --></title>
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
+<title>Koha &rsaquo; Thesaurus value builder for category <!-- TMPL_VAR name="category" --></title>
+<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+	<script type="text/javascript">
+		function report() {
+			opener.document.f.field_value[<!-- TMPL_VAR name="index" -->].value= document.f_pop.result.value;
+			self.close();
+			return false;
+		}
+		</script>
 	</head>
 	<body>
 	<form name="f_pop" action="cataloguing/thesaurus_popup.pl" method="post">
@@ -31,12 +38,6 @@
 	insert a new authority : <input type="text" name="insert" />
 	<input type="submit" name="NEW" value="NEW" />
 	</form>
-		<script>
-		function report() {
-			opener.document.f.field_value[<!-- TMPL_VAR name="index" -->].value= document.f_pop.result.value;
-			self.close();
-			return false;
-		}
-		</script>
+		
 		</body>
 		</html>
