--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reports/cat_issues_top.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reports/cat_issues_top.tmpl
@@ -1,11 +1,6 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Reports</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-</head>
-<body>
-<!-- TMPL_INCLUDE NAME="header.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-reports.inc"-->
-
 <!-- Additions to enable Calendar system -->
 <link rel="stylesheet" type="text/css" href="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-system.css" />
 <!-- End of additions --><!-- Additions to enable Calendar system -->
@@ -13,6 +8,18 @@
 <script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-en.js"></script>
 <script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-setup.js"></script>
 <!-- End of additions -->
+<!-- TMPL_IF NAME="do_it" -->
+<script language="JavaScript" type="text/javascript">
+function Dopop(link) {
+	newin=window.open(link,'width=500,height=400,toolbar=false,scrollbars=yes');
+}
+</script>
+<!-- /TMPL_IF-->
+</head>
+<body>
+<!-- TMPL_INCLUDE NAME="header.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-reports.inc"-->
+
 
 <div id="doc3" class="yui-t2">
    
@@ -22,11 +29,7 @@
 
 <!-- TMPL_IF NAME="do_it" -->
 
-<script language="JavaScript" type="text/javascript">
-function Dopop(link) {
-	newin=window.open(link,'width=500,height=400,toolbar=false,scrollbars=yes');
-}
-</script>
+
 
 	<!-- TMPL_LOOP NAME="mainloop" -->
 		<h1>Top <!-- TMPL_VAR NAME="limit"--> List On Catalogue Checkout </h1>
