--- a/koha-tmpl/intranet-tmpl/prog/en/modules/suggestion/acceptorreject.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/suggestion/acceptorreject.tmpl
@@ -1,6 +1,44 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Suggestion Management</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<script type="text/JavaScript">
+ // <![CDATA[
+    /**
+     *  check(form);
+     *  This function check the form before submit it.
+     */
+     /*
+     function check(form){
+        return true;
+     }
+     */
+	/**
+	 *  displayOther.
+	 *  This function display the select or an textaera to write a reason.
+	 */
+	function displayOther(id) {
+		var spanselect = document.getElementById("span-select-reason"+id);
+		var spanother = document.getElementById("span-other-reason"+id);
+        var select = spanselect.firstChild.nextSibling;	
+        
+		if(select.value != "other"){
+			return;
+		}
+		if(spanother.getAttribute('class')=='content_visible'){
+			spanother.removeAttribute('class');
+			spanselect.removeAttribute('class');
+			spanother.setAttribute('class','content_hidden');
+			spanselect.setAttribute('class','content_visible');
+		}
+		else{
+			spanother.removeAttribute('class');
+			spanselect.removeAttribute('class');
+			spanselect.setAttribute('class','content_hidden');
+			spanother.setAttribute('class','content_visible');			
+		}
+	}
+// ]]>
+</script>
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
@@ -154,44 +192,6 @@
     <!-- /TMPL_IF -->
 <!-- /TMPL_IF -->
 
-<script type="text/JavaScript" language="JavaScript">
- // <![CDATA[
-    /**
-     *  check(form);
-     *  This function check the form before submit it.
-     */
-     /*
-     function check(form){
-        return true;
-     }
-     */
-	/**
-	 *  displayOther.
-	 *  This function display the select or an textaera to write a reason.
-	 */
-	function displayOther(id) {
-		var spanselect = document.getElementById("span-select-reason"+id);
-		var spanother = document.getElementById("span-other-reason"+id);
-        var select = spanselect.firstChild.nextSibling;	
-        
-		if(select.value != "other"){
-			return;
-		}
-		if(spanother.getAttribute('class')=='content_visible'){
-			spanother.removeAttribute('class');
-			spanselect.removeAttribute('class');
-			spanother.setAttribute('class','content_hidden');
-			spanselect.setAttribute('class','content_visible');
-		}
-		else{
-			spanother.removeAttribute('class');
-			spanselect.removeAttribute('class');
-			spanselect.setAttribute('class','content_hidden');
-			spanother.setAttribute('class','content_visible');			
-		}
-	}
-// ]]>
-</script>
 
 </div>
 </div>
