--- a/koha-tmpl/intranet-tmpl/prog/en/modules/z3950/searchresult.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/z3950/searchresult.tmpl
@@ -1,11 +1,16 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Z39.50 Search Results</title>
-<meta http-equiv="refresh" content="2; url=<!-- TMPL_VAR NAME="refresh" -->" />
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<link rel="shortcut icon" href="<!-- TMPL_VAR NAME='themelang' -->/includes/favicon.ico" type="image/x-icon" />
+<title>Koha &rsaquo; Z39.50 Search Results</title>
+<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <style type="text/css"> 
     @import url(<!-- TMPL_VAR NAME='themelang' -->/css/intranet.css);
 </style>
+<script language="javascript" type="text/javascript">
+    function Import(GetThisOne) {
+        opener.document.location= "../cataloguing/addbiblio.pl?z3950=1&oldbiblionumber=<!-- TMPL_VAR NAME="oldbiblionumber" -->&breedingid="+GetThisOne;
+        self.close();
+        return false;
+    }
+</script>
 </head>
 <body>
 
@@ -35,13 +40,7 @@
                 <p>Nothing found</p>
     <!-- /TMPL_IF -->
     <!-- TMPL_IF NAME="numberpending" --><h1>Still <!-- TMPL_VAR NAME="numberpending" --> requests to go</h1><!-- /TMPL_IF -->
-    <script language="javascript" type="text/javascript">
-    function Import(GetThisOne) {
-        opener.document.location= "../cataloguing/addbiblio.pl?z3950=1&oldbiblionumber=<!-- TMPL_VAR NAME="oldbiblionumber" -->&breedingid="+GetThisOne;
-        self.close();
-        return false;
-    }
-</script>
+    
 
 </body>
 </html>
